--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
             <meta name="viewport" content="width-device-width, initial-scale-1.0"> 
                 <title>My First Calculator</title>
                 <script src="https://cdn.tailwindcss.com"></script>
-        </head>
+            <script> 
+                //function that display value
+                function display(val)    
+                {
+                   document.getElementById("result").value+=val
+                } 
+        //function that clears display screen 
+                function clearScreen()
+                {
+                    document.getElementById("result").value="" 
+                }
+                function calculate() 
+                {   
+                    let x=document.getElementById("result").value
+                    let y=eval(x)
+                    document.getElementById("result").value=y 
+                   
+                }
+            </script>
+                </head> 
+        
         <body> 
-            <table class="calculator"> 
+            <table class="calculator "> 
                 <tr>
                     <td colspan="3"><input type="text" id="result"/></td>
                     <td><input class="button" type="button" value="C" onclick="clearScreen()" style="bg-lime-700;">
